fix: simulator-webgl model fixed
